# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.31

  - Fix for Bug#104753 (Bug#33286177), PreparedStatement.setFetchSize(0) causes ArrayIndexOutOfBoundsException.

Version 8.0.30

  - Fix for Bug#107510 (Bug#34259416), Empty string given to set() from Collection.modify() replaces full document.

  - Fix for Bug#106758 (33973048), DatabaseMetaData.getTypeInfo returns AUTO_INCREMENT = false for all datatypes.

  - Fix for Bug#34090350, Update mappings for utf8mb3 and utf8mb4 collations.

  - Fix for Bug#106880 (34022110), Outdated description in connection property 'rewriteBatchedStatements'.

  - Fix for Bug#34082503, CONTRIBUTING.md contains broken links.

  - Fix for Bug#106779 (33976245), Contribution: Fix typo in PropertyDefinitions.
    Thanks to Weijie Wu for his contribution.

  - Fix for Bug#76623 (20856749), JDBC driver misinterprets "--" as a comment, instead of "-- ".

Version 8.0.29

  - Fix for Bug#21978230, COMMENT PARSING NOT PROPER IN PREPSTMT.EXECUTEBATCH().

  - Fix for Bug#81468 (23312764), MySQL server fails to rewrite batch insert when column name contains word select.

  - Fix for Bug#106435 (33850099), 8.0.28 Connector/J has regressive in setAutoCommit after Bug#104067 (33054827).

  - Fix for Bug#106240 (33781440), StringIndexOutOfBoundsException when VALUE is at the end of the query.

  - Fix for Bug#106397 (33893591), Contribution: fix: fix LocalizedErrorMessages.properties doc: less then -> ...
    Thanks to Jianjian Song for his contribution.

  - Fix for Bug#77924 (25710160), JDBC SOCKS SHOULD NOT PERFORM LOCAL DNS RESOLUTION.

  - Fix for Bug#82084 (23743938), YEAR DATA TYPE RETURNS INCORRECT VALUE FOR JDBC GETCOLUMNTYPE().

  - Fix for Bug#106441 (33850155), Add charset mapping for utf8mb3.

  - WL#15048, Upgrade Protocol Buffers dependency to protobuf-java-3.19.4.

  - Fix for Bug#106065 (33726184) Contribution: BigDecimal.toPlainString no need to check decimal exponent.