@@ -29,47 +29,31 @@
 
 package com.mysql.cj.protocol.a;
 
-import java.nio.charset.StandardCharsets;
-
 import com.mysql.cj.BindValue;
-import com.mysql.cj.conf.PropertyKey;
 import com.mysql.cj.conf.PropertySet;
-import com.mysql.cj.conf.RuntimeProperty;
 import com.mysql.cj.exceptions.ExceptionInterceptor;
 import com.mysql.cj.protocol.Message;
 import com.mysql.cj.protocol.ServerSession;
-import com.mysql.cj.protocol.a.NativeConstants.StringSelfDataType;
 import com.mysql.cj.util.StringUtils;
 
-public class ByteArrayValueEncoder extends AbstractValueEncoder {
-
-    protected RuntimeProperty<Integer> maxByteArrayAsHex;
+public class NullValueEncoder extends AbstractValueEncoder {
 
     @Override
     public void init(PropertySet pset, ServerSession serverSess, ExceptionInterceptor excInterceptor) {
         super.init(pset, serverSess, excInterceptor);
-
-        this.maxByteArrayAsHex = pset.getIntegerProperty(PropertyKey.maxByteArrayAsHex);
     }
 
     @Override
     public byte[] getBytes(BindValue binding) {
-        if (binding.escapeBytesIfNeeded()) {
-            return escapeBytesIfNeeded((byte[]) binding.getValue());
-        }
-        return (byte[]) binding.getValue();
+        return StringUtils.getBytes("null");
     }
 
     @Override
     public String getString(BindValue binding) {
-        if (binding.escapeBytesIfNeeded() && binding.getBinaryLength() <= this.maxByteArrayAsHex.getValue()) {
-            return StringUtils.toString(escapeBytesIfNeeded((byte[]) binding.getValue()), StandardCharsets.US_ASCII);
-        }
-        return "** BYTE ARRAY DATA **";
+        return "NULL";
     }
 
-    @Override
     public void encodeAsBinary(Message msg, BindValue binding) {
-        ((NativePacketPayload) msg).writeBytes(StringSelfDataType.STRING_LENENC, (byte[]) binding.getValue());
+        // No-op. Null values are encoded in special null bytes.
     }
 }
