@@ -894,6 +894,7 @@ ConnectionProperties.logSlowQueries=Should queries that take longer than ''slowQ
 ConnectionProperties.logXaCommands=Should the driver log XA commands sent by ''MysqlXaConnection'' to the server, at the DEBUG level of logging?
 ConnectionProperties.maintainTimeStats=Should the driver maintain various internal timers to enable idle time calculations as well as more verbose error messages when the connection to the server fails? Setting this property to false removes at least two calls to ''System.getCurrentTimeMillis()'' per query.
 ConnectionProperties.maxAllowedPacket=Maximum allowed packet size to send to server. If not set, the value of system variable ''max_allowed_packet'' will be used to initialize this upon connecting. This value will not take effect if set larger than the value of ''max_allowed_packet''. Also, due to an internal dependency with the property ''blobSendChunkSize'', this setting has a minimum value of "8203" if ''useServerPrepStmts'' is set to "true".
+ConnectionProperties.maxByteArrayAsHex=Maximum size for a byte array parameter in a prepared statement that is converted to a hexadecimal literal when interpolated by ''JdbcPreparedStatement.toString()''. Any byte arrays larger than this value are interpolated generically as "** BYTE ARRAY DATA **".
 ConnectionProperties.maxQuerySizeToLog=Controls the maximum length of the part of a query that will get logged when profiling or tracing.
 ConnectionProperties.maxReconnects=Maximum number of reconnects to attempt if ''autoReconnect'' is "true".
 ConnectionProperties.maxRows=The maximum number of rows to return. The default "0" means return all rows.
